# cybersecurityproject1

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: django.yml
config/: settings.py  urls.py
pages/: admin.py  apps.py  csrf.html  models.py  signals.py  tests.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_alter_appointment_book_date_and_more.py  0003_rename_customer_appointment_user_id.py  0004_remove_appointment_business_delete_business.py  0005_question_profile.py  0006_remove_question_text.py  0007_question_text.py  0008_rename_question_profile_recovery_question_and_more.py  0009_answer_delete_profile.py  0010_alter_answer_recovery_question.py  0011_alter_appointment_msg_text.py
pages/static/pages/: style.css
pages/templates/pages/: appointments.html  changepswd.html  forgot.html  index.html  login.html  question.html
