[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Paula Meuronen <paula.meuronen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.3.8"
pylint-django = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
